--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
-    "react-window": "^1.8.10"
+    "react-window": "^1.8.10",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
